<resources>
    <string name="app_name">PizzaDelivery</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="have_acc_text">Уже есть аккаунт?</string>
    <string name="enter_text">Войти</string>
    <string name="pizza_sentence_greeting_text">Вкусная пицца - в одном прикосновении</string>
    <string name="join_text">Присоединиться</string>
    <string name="welcome_reg">Добро пожаловать!</string>
    <string name="complite_reg">Заполните форму ниже, чтобы начать заказывать лучшую пиццу!</string>
    <string name="your_email">Ваш электронный адрес</string>
    <string name="password_6_symbols">Пароль (минимум 6 символов)</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="continue_reg">Продолжить регистрацию</string>
    <string name="or">Или</string>
    <string name="with_google">Через Google</string>
    <string name="continue_with_email">Продолжить с электронным адресом</string>
    <string name="about_company">Добро пожаловать в нашу компанию, где каждая кусочек пиццы - это настоящее произведение искусства вкуса! Мы являемся лидерами в индустрии доставки пиццы и стремимся к тому, чтобы каждый наш клиент испытывал полное удовлетворение от нашего продукта и обслуживания.\n\nНаши повара - настоящие мастера своего дела, которые с любовью и тщательностью создают каждую пиццу с использованием только свежих и высококачественных ингредиентов. Мы уверены, что наши рецепты удовлетворят самый изысканный вкус.\n\nМы стремимся не только предложить вам вкуснейшую пиццу, но и сделать ваше обслуживание непревзойденно удобным и эффективным. Наше приложение для заказа позволяет легко и быстро выбрать ваши любимые блюда, настроить ваш заказ и оформить его с доставкой прямо к вашей двери.\n\nМы гордимся нашим превосходным качеством продукции, надежной и оперативной доставкой, а также превосходным обслуживанием клиентов. Наша цель - удовлетворить ваши вкусовые потребности и сделать ваш опыт заказа пиццы максимально приятным и удобным.\n\nПрисоединяйтесь к нашему кулинарному путешествию и доверьте нам заботу о вашем обеде, ужине или вечернем перекусе. Мы гарантируем, что каждая встреча с нашей пиццей будет запоминающейся и вдохновляющей!</string>
    <string name="delivery_time">Доставка осуществляется с 08:00 до 23:00.</string>
    <string name="support_text_delivery">Если у вас возникли какие-либо сложности с заказом, просба обратиться по телефону технической поддержки - 8-495-000-00-00 (в рамках времени доставки).</string>
    <string name="section_developed">Данный раздел на стадии разработки</string>
    <string name="support_text_name_phone">Введите свое имя и номер телефона для связи с технической поддержкой. Наш оператор свяжется с вами как можно скорее.</string>
    <string name="your_name">Ваше имя</string>
    <string name="your_number_phone">Ваш номер телефона</string>
    <string name="reg_text_second">Вы почти зарегистрировались! Осталось совсем немного</string>
    <string name="order_call">Заказать звонок</string>
    <string name="plug">Заглушка</string>
    <string name="history_orders">История заказов</string>
    <string name="menu">Меню</string>
    <string name="stocks">Акции</string>
    <string name="restaurants">Рестораны</string>
    <string name="personal_account">Личный кабинет</string>
    <string name="favourites">Избранное</string>
    <string name="about_the_company">О компании</string>
    <string name="delivery">Доставка</string>
    <string name="support">Поддержка</string>
    <string name="filter_name">Фильтр</string>
    <string name="by_rating">По популярности</string>
    <string name="by_price">По цене</string>
    <string name="filter_text">Фильтр</string>
    <string name="book">Забронировать</string>
    <string name="plug_number">1 шт.</string>
    <string name="save">Сохранить</string>
    <string name="text_example_pizza">Колбаса “пепперони”, пицца соус (томаты, базелик, орегано, чеснок), моцарелла для пиццы</string>
    <string name="into_a_basket">В корзину</string>
    <string name="nutritional_value">Пищевая ценность продукта (в 100г)</string>
    <string name="size_price_plug">Size \nPrice</string>
    <string name="dough_plug">dough plug</string>
    <string name="continue_with_phone">Продолжить с телефоном</string>
</resources>