<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_horizontal_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/value_48_dp"
        app:layout_editor_absoluteX="@dimen/value_24_dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_horizontal_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/value_24_dp"
        app:layout_editor_absoluteX="@dimen/value_24_dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_vertical_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/value_24_dp"
        app:layout_editor_absoluteY="@dimen/value_24_dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_vertical_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/value_24_dp"
        app:layout_editor_absoluteY="@dimen/value_24_dp" />


    <TextView
        android:id="@+id/welcome"
        android:layout_width="@dimen/value_0_dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_reg"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/guide_line_vertical_right"
        app:layout_constraintStart_toStartOf="@id/guide_line_vertical_left"
        app:layout_constraintTop_toTopOf="@id/guide_line_horizontal_top" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/value_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_8_dp"
        android:gravity="center"
        android:text="@string/complite_reg"
        android:textColor="@color/black"
        android:textSize="@dimen/value_18_sp"
        app:layout_constraintEnd_toStartOf="@id/guide_line_vertical_right"
        app:layout_constraintStart_toStartOf="@id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@id/welcome" />

    <TextView
        android:id="@+id/your_email"
        android:layout_width="@dimen/value_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/value_8_dp"
        android:layout_marginTop="@dimen/value_24_dp"
        android:text="@string/your_email"
        android:textColor="@color/black"
        android:textSize="@dimen/value_12_sp"
        app:layout_constraintBottom_toTopOf="@id/editText_email"
        app:layout_constraintEnd_toStartOf="@id/guide_line_vertical_right"
        app:layout_constraintStart_toStartOf="@id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="@dimen/value_0_dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/value_16_sp"
        android:padding="@dimen/value_10_dp"
        android:background="@drawable/custom_edit_text"
        app:layout_constraintEnd_toStartOf="@id/guide_line_vertical_right"
        app:layout_constraintStart_toStartOf="@id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@id/your_email" />

    <TextView
        android:id="@+id/your_password"
        android:layout_width="@dimen/value_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/value_8_dp"
        android:layout_marginTop="@dimen/value_24_dp"
        android:text="@string/password_6_symbols"
        android:textColor="@color/black"
        android:textSize="@dimen/value_12_sp"
        app:layout_constraintBottom_toTopOf="@id/editText_password"
        app:layout_constraintEnd_toStartOf="@id/guide_line_vertical_right"
        app:layout_constraintStart_toStartOf="@id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@id/editText_email" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="@dimen/value_0_dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/value_16_sp"
        android:padding="@dimen/value_10_dp"
        android:background="@drawable/custom_edit_text"
        app:layout_constraintEnd_toStartOf="@id/guide_line_vertical_right"
        app:layout_constraintStart_toStartOf="@id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@id/your_password" />

    <TextView
        android:id="@+id/confirm_password"
        android:layout_width="@dimen/value_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/value_8_dp"
        android:layout_marginTop="@dimen/value_24_dp"
        android:text="@string/confirm_password"
        android:textColor="@color/black"
        android:textSize="@dimen/value_12_sp"
        app:layout_constraintBottom_toTopOf="@id/editText_confirm_password"
        app:layout_constraintEnd_toStartOf="@id/guide_line_vertical_right"
        app:layout_constraintStart_toStartOf="@id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@id/editText_password" />

    <EditText
        android:id="@+id/editText_confirm_password"
        android:layout_width="@dimen/value_0_dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/value_16_sp"
        android:padding="@dimen/value_10_dp"
        android:background="@drawable/custom_edit_text"
        app:layout_constraintEnd_toStartOf="@id/guide_line_vertical_right"
        app:layout_constraintStart_toStartOf="@id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@id/confirm_password" />

    <Button
        android:id="@+id/button2"
        android:layout_width="@dimen/value_240_dp"
        android:layout_height="@dimen/value_40_dp"
        android:layout_marginTop="@dimen/value_40_dp"
        android:background="@drawable/custom_default_button"
        android:text="@string/continue_reg"
        android:textAllCaps="false"
        android:textSize="@dimen/value_16_sp"
        app:layout_constraintEnd_toStartOf="@+id/guide_line_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/editText_confirm_password" />

    <View
        android:id="@+id/center_line_left"
        android:layout_width="150dp"
        android:layout_height="@dimen/value_1_dp"
        android:layout_marginTop="@dimen/value_40_dp"
        android:background="@color/light_gray_line_reg"
        app:layout_constraintEnd_toEndOf="@id/guide_line_vertical_right"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <View
        android:id="@+id/center_line_right"
        android:layout_width="150dp"
        android:layout_height="@dimen/value_1_dp"
        android:layout_marginTop="@dimen/value_40_dp"
        android:background="@color/light_gray_line_reg"
        app:layout_constraintEnd_toEndOf="@id/guide_line_vertical_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="@dimen/value_0_dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/value_32_dp"
        android:text="@string/or"
        android:textColor="@color/light_gray_button_greeting"
        android:textSize="@dimen/value_16_sp"
        app:layout_constraintEnd_toStartOf="@+id/center_line_left"
        app:layout_constraintStart_toEndOf="@+id/center_line_right"
        app:layout_constraintTop_toBottomOf="@+id/button2"  />

        <Button
            android:layout_width="@dimen/value_240_dp"
            android:layout_height="@dimen/value_40_dp"
            android:layout_marginTop="@dimen/value_32_dp"
            android:layout_marginBottom="@dimen/value_32_dp"
            android:background="@drawable/custom_default_button"
            android:drawableStart="@drawable/icon_google"
            android:paddingStart="@dimen/value_50_dp"
            android:paddingEnd="@dimen/value_50_dp"
            android:text="@string/with_google"
            android:textAllCaps="false"
            android:textSize="@dimen/value_16_sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guide_line_vertical_right"
            app:layout_constraintStart_toStartOf="@+id/guide_line_vertical_left"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>