<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".GreetingPages.RegSecondFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_horizontal_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="48dp"
        app:layout_editor_absoluteX="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_horizontal_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="24dp"
        app:layout_editor_absoluteX="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_vertical_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp"
        app:layout_editor_absoluteY="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_vertical_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp"
        app:layout_editor_absoluteY="24dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/reg_text_second"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/guide_line_vertical_right"
        app:layout_constraintStart_toStartOf="@id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@id/guide_line_horizontal_top" />

    <TextView
        android:id="@+id/your_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/your_name"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/editText_name"
        app:layout_constraintEnd_toStartOf="@id/guide_line_vertical_right"
        app:layout_constraintStart_toStartOf="@id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="10dp"
        android:background="@drawable/custom_edit_text"
        app:layout_constraintEnd_toStartOf="@id/guide_line_vertical_right"
        app:layout_constraintStart_toStartOf="@id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@id/your_name" />

    <TextView
        android:id="@+id/your_number_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/your_number_phone"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/editText_number_phone"
        app:layout_constraintEnd_toStartOf="@id/guide_line_vertical_right"
        app:layout_constraintStart_toStartOf="@id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@id/editText_name" />

    <EditText
        android:id="@+id/editText_number_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="10dp"
        android:background="@drawable/custom_edit_text"
        app:layout_constraintEnd_toStartOf="@id/guide_line_vertical_right"
        app:layout_constraintStart_toStartOf="@id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@id/your_number_phone" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_default_button"
        android:text="@string/continue_reg"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guide_line_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/editText_number_phone" />

    <View
        android:id="@+id/center_line_right"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:background="@color/light_gray_line_reg"
        app:layout_constraintEnd_toEndOf="@id/guide_line_vertical_right"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <View
        android:id="@+id/center_line_left"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:background="@color/light_gray_line_reg"
        app:layout_constraintEnd_toStartOf="@id/textView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/or"
        android:textColor="@color/light_gray_button_greeting"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/center_line_left"
        app:layout_constraintStart_toEndOf="@+id/center_line_right"
        app:layout_constraintTop_toBottomOf="@+id/button2"  />

        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/custom_default_button"
            android:drawableStart="@drawable/icon_google"
            android:paddingStart="55dp"
            android:paddingEnd="55dp"
            android:text="@string/with_google"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guide_line_vertical_right"
            app:layout_constraintStart_toStartOf="@+id/guide_line_vertical_left"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>